# cli-hook-poc

./: README.md  pyproject.toml
src/cli_hook_poc/: __init__.py  __main__.py  plugin.py  settings.py
